force-app/main/default/objects/FINS_Insurance_Product_Coverage__c/FINS_Insurance_Product_Coverage__c.object-meta.xml
<CustomObject>
    <description>Object The describes the coverages associated with a product, placeholder for what would be mapped via an external policy administration system.</description>
    <label>Product Coverage</label>
    <nameField>
        <label>Product Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>