force-app/main/default/objects/FINS_Insurance_Product_Coverage__c/fields/Comparison_Text__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Text__c</fullName>
    <label>Comparison Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>