force-app/main/default/objects/FINS_Insurance_Product_Coverage__c/fields/Decsription__c.field-meta.xml
<CustomField>
    <fullName>Decsription__c</fullName>
    <label>Decsription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>