force-app/main/default/objects/FINS_Insurance_Product_Coverage__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Insurance</fullName>
            </value>
            <value>
                <fullName>Car Insurance</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Travel Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>