force-app/main/default/objects/FINS_Insurance_Product_Coverage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coverage_Type__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Decsription__c</columns>
    <columns>Premium_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>